@@ -637,6 +637,7 @@ wxOSX:
 - Fix using wxHTTP and wxFTP from worker thread.
 - Fix wxFileDialog::GetFilterIndex() for file open dialogs (phsilva).
 - Fix printing all pages non-interactively (John Roberts).
+- Fix handling of WXK_NUMPAD_ENTER in wxTextCtrl (John Roberts).
 - Fix custom paper support (tijsv).
 - Return false from wxSound::Create()/IsOk() if the file doesn't exist.
 
